--- a/src/app/item-cadastro/item-cadastro.component.html
+++ b/src/app/item-cadastro/item-cadastro.component.html
@@ -1,5 +1,32 @@
-<div class="ui-g">
+<form>
+    <div class = "ui-g">
+        
+        <div class = "ui-g-12">
+            <h1>Gestão de patrimônio</h1>
+        </div>
 
+        <div class = "ui-g-6 ui-fluid">
+            <label>Etiqueta</label>
+            <p-inputMask name = "etiqueta" mask = "aa9999"></p-inputMask>
+        </div>
+
+        <div class = "ui-g-6 ui-fluid">
+            <label>Data da aquisição</label>
+            <p-calendar name = "data_aquisicao" date-format = "dd/MM/yyyy"></p-calendar>
+        </div>
+
+        <div class = "ui-g-12 ui-fluid">
+            <label>Descrição</label>
+            <input pInputText name = "descricao">
+        </div>
+
+        <div class = "ui-g-12">
+            <button pButton type="submit" label="Adicionar"></button>
+        </div>
+    </div>
+</form>
+
+<div class="ui-g">
     <div class = "ui-g-12">
 
         <p-dataTable [value] = "itens">
@@ -11,7 +38,5 @@
                 </ng-template> 
             </p-column>
         </p-dataTable>
-
     </div>
-
 </div>
