Criação do serviço de criar novo objeto

--- a/src/app/item-cadastro/item-cadastro.component.html
+++ b/src/app/item-cadastro/item-cadastro.component.html
@@ -1,4 +1,4 @@
-<form>
+<form #frm="ngForm" (ngSubmit)="adicionar(frm)">
     <div class = "ui-g">
         
         <div class = "ui-g-12">
@@ -7,21 +7,21 @@
 
         <div class = "ui-g-6 ui-fluid">
             <label>Etiqueta</label>
-            <p-inputMask name = "etiqueta" mask = "aa9999"></p-inputMask>
+            <p-inputMask name = "etiqueta" mask = "aa9999" ngModel  [required]="true"></p-inputMask>
         </div>
 
         <div class = "ui-g-6 ui-fluid">
             <label>Data da aquisição</label>
-            <p-calendar name = "data_aquisicao" date-format = "dd/MM/yyyy"></p-calendar>
+            <p-calendar name = "data_aquisicao" date-format = "dd/MM/yyyy" ngModel [required]="true"></p-calendar>
         </div>
 
         <div class = "ui-g-12 ui-fluid">
             <label>Descrição</label>
-            <input pInputText name = "descricao">
+            <input pInputText name = "descricao" ngModel [required]="true">
         </div>
 
         <div class = "ui-g-12">
-            <button pButton type="submit" label="Adicionar"></button>
+            <button pButton type="submit" label="Adicionar" [disabled]="frm.invalid"></button>
         </div>
     </div>
 </form>
